@@ -43,11 +43,11 @@ class TodoyuFormElement_CancelButton extends TodoyuFormElement_Button {
 	 * Init: Set default values for save button
 	 */
 	protected function init() {
-		if( ! $this->hasAttribute('text') ) {
-			$this->setAttribute('text', 'core.form.field.cancel');
+		if( !$this->hasAttribute('text') ) {
+			$this->setText('core.form.field.cancel');
 		}
-		if( ! $this->hasAttribute('class') ) {
-			$this->setAttribute('class', 'cancel');
+		if( !$this->hasAttribute('class') ) {
+			$this->setClass('cancel');
 		}
 
 		parent::init();
